Registered plugins for all constraint types

--- a/fuse_constraints/CMakeLists.txt
+++ b/fuse_constraints/CMakeLists.txt
@@ -6,6 +6,7 @@ set(build_depends
   fuse_graphs
   fuse_variables
   geometry_msgs
+  pluginlib
   roscpp
 )
 
@@ -88,6 +89,11 @@ install(
 
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
+install(
+  FILES fuse_plugins.xml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 #############
