--- a/fuse_constraints/package.xml
+++ b/fuse_constraints/package.xml
@@ -18,8 +18,13 @@
   <depend>fuse_graphs</depend>
   <depend>fuse_variables</depend>
   <depend>geometry_msgs</depend>
+  <depend>pluginlib</depend>
   <depend>roscpp</depend>
   <depend>suitesparse</depend>
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
+
+  <export>
+    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
+  </export>
 </package>
