--- a/fuse_graphs/package.xml
+++ b/fuse_graphs/package.xml
@@ -13,7 +13,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>libceres-dev</depend>
   <depend>fuse_core</depend>
+  <depend>pluginlib</depend>
   <depend>roscpp</depend>
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
+
+  <export>
+    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
+  </export>
 </package>
